--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -78,7 +78,6 @@ header {
             margin-bottom: 0 !important;
           }
           &:hover {
-            background-color: $color-primary;
             color: $color-black;
           }
         }
@@ -117,7 +116,7 @@ header {
               @include md {
                 font-size: 18px;
                 position: relative;
-                top: -0.5px;
+                top: 0;
               }
             }
           }
@@ -126,6 +125,9 @@ header {
       .header-icon-two {
         text-align: right;
         margin-right: 0.5rem;
+        @include md {
+          margin-top: -2.5px;
+        }
         p {
           width: auto;
           margin: auto !important;
@@ -464,7 +466,7 @@ header {
           content: 'Search';
           position: absolute;
           left: -48px;
-          top: 3px;
+          top: 3.5px;
           font-size: $font-size-13;
           color: $color-black;
           font-family: $font-family-default;
@@ -481,7 +483,7 @@ header {
           left: -52px;
           right: 0;
           top: 0px;
-          height: 18.8px;
+          height: 19px;
           background-color: $color-primary;
           color: $color-2;
           width: 76px;
