--- a/src/scss/default/theme/defaults/_default-styles.scss
+++ b/src/scss/default/theme/defaults/_default-styles.scss
@@ -398,7 +398,7 @@ body {
     line-height: inherit;
     padding: inherit;
     text-decoration: none;
-    padding-top: 3px;
+    padding: 2px 0;
 
     &:hover,
     &:focus {
