--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -116,7 +116,7 @@ header {
               @include md {
                 font-size: 18px;
                 position: relative;
-                top: 0;
+                top: -1px;
               }
             }
           }
@@ -133,7 +133,7 @@ header {
           margin: auto !important;
           a {
             position: relative;
-            padding: 3px 6px;
+            padding: 4px 6px 2px 6px;
             &:after {
               content: '\e90f';
               font-family: 'icomoon';
@@ -142,7 +142,7 @@ header {
               @include md {
                 font-size: 18px;
                 position: relative;
-                top: -0.5px;
+                top: -1px;
               }
             }
           }
@@ -179,7 +179,6 @@ header {
           }
           &:hover {
             color: $color-black;
-            background-color: $color-primary;
             a {
               color: $color-black !important;
             }
@@ -214,7 +213,7 @@ header {
               font-size: $font-size-16 !important;
               cursor: pointer;
               margin: 2px 0;
-              padding: 0 3px;
+              padding: 2px 3px 0 3px;
               @include md {
                 margin: 2px 5px;
               }
