--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -206,3 +206,12 @@
     }
   }
 }
+#footer {
+  .reference-social-icons-c1-v02 {
+    .inner {
+      > .component-content {
+        justify-content: flex-end;
+      }
+    }
+  }
+}
