--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -210,7 +210,10 @@
   .reference-social-icons-c1-v02 {
     .inner {
       > .component-content {
-        justify-content: flex-end;
+        justify-content: center;
+        @include sm {
+          justify-content: flex-end;
+        }
       }
     }
   }
