--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -579,6 +579,16 @@ a:hover {
   border-bottom: 2px solid var(--border-color-2);
 }
 
+a.bordered-text:hover {
+  border-bottom: none;
+}
+
+.text-color-black-m * {
+  @media screen and (max-width: 767px) {
+    color: $color-2 !important;
+  }
+}
+
 .richText-content {
   ul > li,
   ol > li {
