--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -9,6 +9,8 @@
     border-top: 1px solid $color-grey-3;
     padding: 3rem 0 3rem 0.4rem;
     .footer-logo {
+      position: relative;
+      left: -3px;
       a {
         border: 4px solid $color-white;
         margin: 0 -3px;
