--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1828,7 +1828,7 @@ ul.hidden-bullets {
 }
 
 .article-breadcrumbs .breadcrumbs-list .breadcrumb-list-item a {
-  padding: 0 !important;
+  padding: 2px 0 0 0 !important;
 }
 
 /* Breadcrumb css End */
