--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1902,3 +1902,19 @@ li.searchResults-pagination-item.is-active a {
     line-height: initial !important;
   }
 }
+.share-price-ticker {
+  min-height: 100px;
+  border: 0;
+}
+.share-price-mini-chart {
+  min-height: 550px;
+  border: 0;
+}
+.corporate-alert-service {
+  min-height: 800px;
+  border: 0;
+}
+.regulatory-news-service {
+  min-height: 800px;
+  border: 0;
+}
