--- a/src/scss/default/theme/theme-configuration/_typography.scss
+++ b/src/scss/default/theme/theme-configuration/_typography.scss
@@ -19,9 +19,9 @@ $font-stack-tertiary: $font-family-default !default;
 $font-family-primary: $font-stack !default;
 $font-family-secondary: $font-stack-secondary !default;
 $font-family-tertiary: $font-stack-tertiary !default;
-$font-family-light: $font-family-default, arial, sans-serif !default;
-$font-family-medium: $font-family-default, arial, sans-serif !default;
-$font-family-bold: $font-family-default, arial, sans-serif !default;
+$font-family-light: $font-family-default !default;
+$font-family-medium: $font-family-default !default;
+$font-family-bold: $font-family-default !default;
 $font-family-black: $font-stack-secondary !default;
 
 //ADJUST FONT AND HEADING SIZES FOR THE THEME
