--- a/etc/designs/zg/basic/desktop/css/core/main.css
+++ b/etc/designs/zg/basic/desktop/css/core/main.css
@@ -31,7 +31,7 @@ html, body {
 body {
   line-height: 1.5;
   color: black;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   position: relative;
   overflow: auto; }
 
@@ -57,7 +57,7 @@ h4,
 h5,
 h6 {
   font-weight: bold;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
   color: #323131;
   margin: 10px 0; }
 
