--- a/etc/designs/zg/basic/desktop/sass/core/main.scss
+++ b/etc/designs/zg/basic/desktop/sass/core/main.scss
@@ -14,7 +14,7 @@ html, body {
 body {
   line-height: 1.5;
   color: $default-text-color;
-  font-family: Arial, Helvetica, sans-serif;
+  // font-family: Arial, Helvetica, sans-serif;
   position: relative;
   overflow: auto;
 }
@@ -45,7 +45,7 @@ h4,
 h5,
 h6 {
   font-weight: bold;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  // font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: $text-color;
   margin: 10px 0;
 }
