--- a/etc/designs/zg/bp-newco/desktop/sass/components/location.finder.scss
+++ b/etc/designs/zg/bp-newco/desktop/sass/components/location.finder.scss
@@ -2,7 +2,7 @@
  
 .locationfinder {
 	input[type=text] {
-		font-family: arial;
+		// font-family: arial;
 		font-size: 12px;
 		border: $borderbox;
 		display: inline;
