--- a/etc/designs/zg/cf/desktop/css/components/location.finder.css
+++ b/etc/designs/zg/cf/desktop/css/components/location.finder.css
@@ -12,7 +12,7 @@
 /* BUTTONS
 ----------------------------------*/
 .locationfinder input[type=text] {
-  font-family: arial;
+  /* font-family: arial; */
   font-size: 12px;
   border: 1px solid #D5D1CE;
   display: inline;
