--- a/etc/designs/zg/cf/desktop/css/components/productlist.css
+++ b/etc/designs/zg/cf/desktop/css/components/productlist.css
@@ -132,7 +132,7 @@
       width: 60%;
       margin-left: auto;
       margin-right: auto;
-      font-family: arial;
+      /* font-family: arial; */
       font-size: 13px;
       font-weight: 700; }
 
