--- a/etc/designs/zg/cf/desktop/css/components/search.results.css
+++ b/etc/designs/zg/cf/desktop/css/components/search.results.css
@@ -139,7 +139,7 @@
   font-size: 0.85em; }
 
 .searchResults-description p {
-  font-family: Arial, sans-serif;
+  /* font-family: Arial, sans-serif; */
   font-size: 12px;
   color: #635a54; }
 
