--- a/etc/designs/zg/cf/desktop/css/libs/videojs.css
+++ b/etc/designs/zg/cf/desktop/css/libs/videojs.css
@@ -309,7 +309,7 @@
   line-height: 1;
   font-weight: normal;
   font-style: normal;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   word-break: initial; }
 
 .video-js:-moz-full-screen {
@@ -407,7 +407,7 @@ body.vjs-full-window {
   color: #fff;
   background-color: #000;
   font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   text-align: center;
   width: 300px;
   height: 150px;
@@ -510,7 +510,7 @@ body.vjs-full-window {
   display: block;
   padding: 0;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   overflow: auto; }
 
 .vjs-menu .vjs-menu-content > * {
@@ -770,7 +770,7 @@ body.vjs-full-window {
   border-radius: 0.3em;
   color: #000;
   float: right;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-size: 1em;
   padding: 6px 8px 8px 8px;
   pointer-events: none;
@@ -1139,7 +1139,7 @@ video::-webkit-media-text-track-display {
 .vjs-error .vjs-error-display:before {
   color: #fff;
   content: "X";
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   font-size: 4em;
   left: 0;
   line-height: 1;
