--- a/src/scss/brand/components/bottom-boxes/_index.scss
+++ b/src/scss/brand/components/bottom-boxes/_index.scss
@@ -26,7 +26,7 @@
   }
   .btn {
     margin: 0;
-    width: 85%;
+    width: auto;
     text-align: left;
     justify-content: flex-start;
     max-width: 343px;
