--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -135,7 +135,8 @@
     padding: 0 0rem 0 0.15rem;
     font-weight: $font-normal;
     a {
-      text-decoration: underline 2px solid $color-primary;
+      border-bottom: 2px solid var(--color-primary);
+      padding: 0;
       &:focus {
         background: transparent !important;
         outline: 2px solid;
